<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_edit"
    tools:context=".setting.SettingFragment">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_back"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
    android:id="@+id/tv_edt_pass"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="18dp"
    android:layout_marginTop="15dp"
    android:text="@string/setting_preference"
    android:textColor="@color/white"
    android:textSize="22sp"
    android:fontFamily="@font/ibmplexsansthailooped_semibold"
    app:layout_constraintStart_toEndOf="@id/btn_back"
    app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/linear_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="100dp"
            android:layout_marginTop="18dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ibmplexsans_medium"
                android:textSize="20sp"
                android:textColor="@color/black_2"
                android:text="@string/languange" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_in_languange"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

           <com.google.android.material.switchmaterial.SwitchMaterial
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/dark_Mode"
               android:fontFamily="@font/ibmplexsans_medium"
               android:textSize="20sp"
               android:textColor="@color/black_2"
               android:layout_marginStart="100dp"
               android:layout_marginBottom="15dp"/>

        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>